feat: 文章头部信息优化

--- a/blogs/.vuepress/styles/index.css
+++ b/blogs/.vuepress/styles/index.css
@@ -2,3 +2,8 @@
   width: 16rem !important;
   border-left: 1px dashed rgb(234 236 239 / var(--tw-border-opacity));
 }
+
+small a[href="https://shichaohui.github.io/"] .external-link-icon
+{
+  display: none;
+}
